using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Lesson_4
{
    public class AnimationStrings
    {
        public static string AttackCoolDown => "AttackCoolDown";

        public static string IsGrounded => "isGrounded";

        public static string IsMoving => "isMoving";
        public static string IsRunning => "isRunning";
        public static string yVelocity=> "yVelocity";
        public static string Jump => "Jump";

        public static string IsOnWall => "isOnWall";
        public static string IsOnCeiling => "isOnCeiling";
        public static string Attack => "Attack";
        public static string CanMove => "CanMove";
        public static string HasTarget => "hasTarget";
        public static string IsAlive => "isAlive";
        public static string IsHit => "isHit";
        public static string Hit => "Hit";
        public static string LockVelocity => "LockVelocity";
        public static string RangedAttack => "RangedAttack";

        public static string IsWallJump => "IsWallJump";


    }

}
